k8s-v2/overlays/production/core/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  labels:
    app.kubernetes.io/name: alb
spec:
  controller: eks.amazonaws.com/alb
