k8s-v2/overlays/production/core/beehub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beehub-ingress
  namespace: algohive
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beehub
                port:
                  number: 8081
